--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -46,7 +46,11 @@ textarea {
 
 /* CARD */
 
-.card-img-top {
+.card-img {
 	max-height: 200px;
 	object-fit: cover;
+}
+
+.card-overlay-title {
+	padding-top: 6em;
 }
